<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">GroceryPlanner</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="text_view_welcome_msg">Grosery Planner</string>
    <string name="button_go">GO!</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="action_bar_title">Grocery Planner</string>
    <string name="text_view_title_choose">What do you want to buy?</string>
    <string name="text_view_other_grosery">Couldn\'t find your grocery?, so go ahead and add it by yourself</string>
    <string name="button_add_other">+</string>
    <string name="button_vegetables">Vegetables</string>
    <string name="button_fruits">Fruits</string>
    <string name="button_bakey">Bakery</string>
    <string name="button_meat">Meat(General)</string>
    <string name="button_diary">Diary aliments</string>
    <string name="button_nuts_oil">Nuts, oils, butter</string>
    <string name="button_cereals">Cereals</string>
    <string name="button_condiments">Condiments</string>
    <string name="button_beverages">Beverages</string>
    <string name="title_activity_selection_grosery">SelectionGroseryActivity</string>
    <string name="button_canned_goods">Canned goods</string>
    <string name="text_view_title_vegetables">VEGETABLES</string>
    <string name="checkbox_cucumber">Cucumber</string>
    <string name="checkBox_lettuce">Lettuce</string>
    <string name="checkBox_mushrooms">Mushrooms</string>
    <string name="checkBox_asparagus">Asparagus</string>
    <string name="checkBox_broccoli">Broccoli</string>
    <string name="checkBox_spinach">Spinach</string>
    <string name="checkBox_onions">Onions</string>
    <string name="checkBox_tomatoes">Tomatoes</string>
    <string name="checkBox_garlic">Garlic</string>
    <string name="edit_text_how_many_hint">How many</string>
    <string name="edit_text_how_much_hint">How much</string>
    <string name="button_add_to_list">Add to list</string>
    <string name="checkBox_whole_grain_bread">Whole grain bread</string>
    <string name="checkBox_brown_rice_wrap">Brown rice wrap</string>
    <string name="checkBox_baguette">Baguette</string>
    <string name="text_view_title_bakery">BAKERY</string>
    <string name="text_view_title_beverages">BEVERAGES</string>
    <string name="checkbox_tea">Tea</string>
    <string name="checkBox_coffee">Coffee</string>
    <string name="checkBox_bottled_water">Bottled water</string>
    <string name="checkBox_coca_cola">Coca Cola</string>
    <string name="checkBox_pepsi">Pepsi</string>
    <string name="checkBox_7up">7up</string>
    <string name="checkBox_sprite">Sprite</string>
    <string name="checkBox_yogurt">Yogurt</string>
    <string name="checkbox_chickpeas">Chickpeas</string>
    <string name="checkBox_red_beans">Red beans</string>
    <string name="checkBox_lentils">Lentils</string>
    <string name="checkBox_water_packed_tuna">Water packed tuna</string>
    <string name="checkBox_tomato_soups">Tomato soup</string>
    <string name="checkBox_vegetable_soup">Vegetable soup</string>
    <string name="text_view_title_canned_goods">CANNED GOODS</string>
    <string name="text_view_title_cereals">CEREALS</string>
    <string name="checkbox_musli">Musli</string>
    <string name="checkBox_all_bran">All bran</string>
    <string name="checkBox_chocolate_rice">Chocolate rice</string>
    <string name="checkBox_steel_cut_oats">Steel-cut oats</string>
    <string name="checkBox_froot_loops">Froot Loops</string>
    <string name="text_view_title_condiments">CONDIMENTS</string>
    <string name="checkbox_mustard">Mustard</string>
    <string name="checkBox_pepper">Pepper</string>
    <string name="checkBox_mayonnaise">Mayonnaise</string>
    <string name="checkBox_tomato_paste">Tomato paste</string>
    <string name="checkBox_cumin">Cumin</string>
    <string name="checkBox_paprika">Paprika</string>
    <string name="text_view_title_fruits">Fruits</string>
    <string name="checkbox_blueberries">Blueberries</string>
    <string name="checkBox_apples">Apples</string>
    <string name="checkBox_bananas">Bananas</string>
    <string name="checkBox_avocado">Avocado</string>
    <string name="checkBox_mango">Mango</string>
    <string name="checkBox_strawberry">Strawberries</string>
    <string name="checkBox_cranberries">Cranberries</string>
    <string name="checkBox_lemons">Lemons</string>
    <string name="text_view_title_meat_general">MEAT(GENERAL)</string>
    <string name="checkbox_chicken_breast">Chicken breast</string>
    <string name="checkBox_salmon">Salmon</string>
    <string name="checkBox_turkey">Turkey</string>
    <string name="checkBox_pork">Pork</string>
    <string name="checkBox_beef">Beef</string>
    <string name="pref_category_preferences">Preferences</string>
    <string name="pref_username_title">Your name</string>
    <string name="pref_username_summary">Personalize your grocery list with your name.</string>
    <string name="title_activity_main_grosery">MainGroseryActivity</string>
    <string name="title_activity_app_settingsy">Preferences</string>
    <string name="button_see_list">See List</string>
    <string name="title_activity_see_list">SeeListActivity</string>
    <string name="text_view_title_see_list">Title see list</string>
    <string name="default_username">friend</string>
    <string name="user_list_title">Hello %s, here is you list:</string>
    <string name="text_view_list">Not groceries added yet.</string>
    <string name="title_activity_add_grocery">AddGroceryActivity</string>
    <string name="text_view_title_add">Add your grocery</string>
    <string name="edit_text_grocery_hint">Grocery</string>

</resources>
