<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:orientation="vertical" android:layout_width="match_parent"
              android:layout_height="match_parent"
              tools:context="co.mobilemakers.groceryplanner.MainGroceryActivity">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/text_view_title_choose"
        android:id="@+id/text_view_title_choose"
        android:layout_gravity="center_horizontal"
        android:padding="16dp"/>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:padding="10dp">

        <Button android:id="@+id/button_vegetables"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/button_vegetables" />

        <Button android:id="@+id/button_fruits"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/button_fruits" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:padding="10dp">

        <Button android:id="@+id/button_bakery"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/button_bakey"/>

        <Button android:id="@+id/button_meat"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/button_meat" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:padding="10dp">

        <Button android:id="@+id/button_cereals"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/button_cereals" />

        <Button android:id="@+id/button_condiments"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/button_condiments" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:padding="10dp">

        <Button android:id="@+id/button_beverages"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/button_beverages" />

        <Button android:id="@+id/button_canned_goods"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/button_canned_goods" />
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/text_view_other_grosery"
        android:id="@+id/text_view_other_grosery" />

    <Button android:id="@+id/button_add_other"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:text="@string/button_add_other"
        android:layout_gravity="right"
        android:background="@drawable/button_style" />

    <Button android:id="@+id/button_see_list"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:text="@string/button_see_list"
        android:background="@drawable/button_style"/>

</LinearLayout>
