<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/text_view_title_bakery"
        android:id="@+id/text_view_title_bakery"
        android:layout_gravity="center_horizontal"
        android:padding="16dp"/>

    <TableLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">

            <CheckBox   android:id="@+id/checkBox_whole_grain_bread"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/checkBox_whole_grain_bread" />

            <EditText   android:id="@+id/edit_text_whole_grain_bread_quantity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/edit_text_how_many_hint"
                android:ems="10"
                android:gravity="center"
                android:enabled="false"/>
        </TableRow>

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">

            <CheckBox   android:id="@+id/checkBox_brown_rice_wrap"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/checkBox_brown_rice_wrap" />

            <EditText   android:id="@+id/edit_text_brown_rice_wrap_quantity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/edit_text_how_many_hint"
                android:ems="10"
                android:gravity="center"
                android:enabled="false"/>
        </TableRow>

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">

            <CheckBox   android:id="@+id/checkBox_baguette"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/checkBox_baguette" />

            <EditText   android:id="@+id/edit_text_baguette_quantity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/edit_text_how_many_hint"
                android:ems="10"
                android:gravity="center"
                android:enabled="false"/>
        </TableRow>

    </TableLayout>

    <Button android:id="@+id/button_add_to_list"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:text="@string/button_add_to_list"
        android:layout_gravity="right"
        android:background="@drawable/button_style"
        android:enabled="false"/>


</LinearLayout>
