<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/text_view_title_meat_general"
        android:id="@+id/text_view_title_meat_general"
        android:layout_gravity="center_horizontal"
        android:padding="16dp"/>

    <TableLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">

            <CheckBox   android:id="@+id/checkBox_chicken_breast"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/checkbox_chicken_breast" />

            <EditText   android:id="@+id/edit_text_chicken_breast_quantity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:inputType="number"
                android:hint="@string/edit_text_quantity_hint"
                android:ems="10"
                android:gravity="center"
                android:enabled="false"/>
        </TableRow>

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">

            <CheckBox   android:id="@+id/checkBox_salmon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/checkBox_salmon" />

            <EditText   android:id="@+id/edit_text_salmon_quantity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:inputType="number"
                android:hint="@string/edit_text_quantity_hint"
                android:ems="10"
                android:gravity="center"
                android:enabled="false"/>
        </TableRow>

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">

            <CheckBox   android:id="@+id/checkBox_turkey"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/checkBox_turkey" />

            <EditText   android:id="@+id/edit_text_turkey_quantity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:inputType="number"
                android:hint="@string/edit_text_quantity_hint"
                android:ems="10"
                android:gravity="center"
                android:enabled="false"/>
        </TableRow>

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">

            <CheckBox   android:id="@+id/checkBox_beef"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/checkBox_beef" />

            <EditText   android:id="@+id/edit_text_beef_quantity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:inputType="number"
                android:hint="@string/edit_text_quantity_hint"
                android:ems="10"
                android:gravity="center"
                android:enabled="false"/>
        </TableRow>

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">

            <CheckBox   android:id="@+id/checkBox_pork"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/checkBox_pork" />

            <EditText   android:id="@+id/edit_text_pork_quantity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:inputType="number"
                android:hint="@string/edit_text_quantity_hint"
                android:ems="10"
                android:gravity="center"
                android:enabled="false"/>
        </TableRow>

    </TableLayout>

    <Button android:id="@+id/button_add_to_list"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:text="@string/button_add_to_list"
        android:layout_gravity="right"
        android:background="@drawable/button_style"
        android:enabled="false"/>

</LinearLayout>
